--- a/src/TekhLoanManagement.Infrastructure/TekhLoanManagement.Infrastructure.csproj
+++ b/src/TekhLoanManagement.Infrastructure/TekhLoanManagement.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Context\" />
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TekhLoanManagement.Application\TekhLoanManagement.Application.csproj" />
+    <ProjectReference Include="..\TekhLoanManagement.Domain\TekhLoanManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
