--- a/src/TekhLoanManagement.Domain/TekhLoanManagement.Domain.csproj
+++ b/src/TekhLoanManagement.Domain/TekhLoanManagement.Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Entities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
