--- a/src/TekhLoanManagement.Infrastructure/TekhLoanManagement.Infrastructure.csproj
+++ b/src/TekhLoanManagement.Infrastructure/TekhLoanManagement.Infrastructure.csproj
@@ -12,6 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TekhLoanManagement.Application\TekhLoanManagement.Application.csproj" />
     <ProjectReference Include="..\TekhLoanManagement.Domain\TekhLoanManagement.Domain.csproj" />
   </ItemGroup>
