Add Entities And DbContext

--- a/src/TekhLoanManagement.Api/appsettings.json
+++ b/src/TekhLoanManagement.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TekhLoanDbContext": "Server=(localdb)\\mssqllocaldb;Database=TekhLoanDbContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
