--- a/src/TekhLoanManagement.Api/TekhLoanManagement.Api.csproj
+++ b/src/TekhLoanManagement.Api/TekhLoanManagement.Api.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\TekhLoanManagement.Infrastructure\TekhLoanManagement.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
