--- a/src/TekhLoanManagement.Api/Properties/launchSettings.json
+++ b/src/TekhLoanManagement.Api/Properties/launchSettings.json
@@ -13,8 +13,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "applicationUrl": "https://localhost:7018;http://localhost:5221",
+      "launchUrl": "Swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
