--- a/src/TekhLoanManagement.Application/TekhLoanManagement.Application.csproj
+++ b/src/TekhLoanManagement.Application/TekhLoanManagement.Application.csproj
@@ -7,8 +7,42 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\Responses\" />
-    <Folder Include="DTOs\Requests\" />
+    <Folder Include="CQRS\Behaviors\" />
+    <Folder Include="CQRS\Commands\Funds\" />
+    <Folder Include="CQRS\Commands\Installments\" />
+    <Folder Include="CQRS\Commands\Loans\" />
+    <Folder Include="CQRS\Commands\Lotteries\" />
+    <Folder Include="CQRS\Commands\Members\" />
+    <Folder Include="CQRS\Commands\WalletAccounts\" />
+    <Folder Include="CQRS\Commands\Transactions\" />
+    <Folder Include="CQRS\Handlers\Funds\" />
+    <Folder Include="CQRS\Handlers\Installments\" />
+    <Folder Include="CQRS\Handlers\Loans\" />
+    <Folder Include="CQRS\Handlers\Lotteries\" />
+    <Folder Include="CQRS\Handlers\Members\" />
+    <Folder Include="CQRS\Handlers\Transactions\" />
+    <Folder Include="CQRS\Handlers\WalletAccounts\" />
+    <Folder Include="CQRS\Queries\Funds\" />
+    <Folder Include="CQRS\Queries\Installments\" />
+    <Folder Include="CQRS\Queries\Loans\" />
+    <Folder Include="CQRS\Queries\Lotteries\" />
+    <Folder Include="CQRS\Queries\Members\" />
+    <Folder Include="CQRS\Queries\Transactions\" />
+    <Folder Include="CQRS\Queries\WalletAccounts\" />
+    <Folder Include="DTOs\Requests\Funds\" />
+    <Folder Include="DTOs\Requests\Installments\" />
+    <Folder Include="DTOs\Requests\Loans\" />
+    <Folder Include="DTOs\Requests\Lotteries\" />
+    <Folder Include="DTOs\Requests\Members\" />
+    <Folder Include="DTOs\Requests\Transactions\" />
+    <Folder Include="DTOs\Requests\WalletAccounts\" />
+    <Folder Include="DTOs\Responses\Funds\" />
+    <Folder Include="DTOs\Responses\Installments\" />
+    <Folder Include="DTOs\Responses\Loans\" />
+    <Folder Include="DTOs\Responses\Lotteries\" />
+    <Folder Include="DTOs\Responses\Members\" />
+    <Folder Include="DTOs\Responses\Transactions\" />
+    <Folder Include="DTOs\Responses\WalletAccounts\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
