--- a/src/TekhLoanManagement.Application/TekhLoanManagement.Application.csproj
+++ b/src/TekhLoanManagement.Application/TekhLoanManagement.Application.csproj
@@ -10,21 +10,18 @@
     <Folder Include="CQRS\Behaviors\" />
     <Folder Include="CQRS\Commands\Funds\" />
     <Folder Include="CQRS\Commands\Installments\" />
-    <Folder Include="CQRS\Commands\Loans\" />
     <Folder Include="CQRS\Commands\Lotteries\" />
     <Folder Include="CQRS\Commands\Members\" />
     <Folder Include="CQRS\Commands\WalletAccounts\" />
     <Folder Include="CQRS\Commands\Transactions\" />
     <Folder Include="CQRS\Handlers\Funds\" />
     <Folder Include="CQRS\Handlers\Installments\" />
-    <Folder Include="CQRS\Handlers\Loans\" />
     <Folder Include="CQRS\Handlers\Lotteries\" />
     <Folder Include="CQRS\Handlers\Members\" />
     <Folder Include="CQRS\Handlers\Transactions\" />
     <Folder Include="CQRS\Handlers\WalletAccounts\" />
     <Folder Include="CQRS\Queries\Funds\" />
     <Folder Include="CQRS\Queries\Installments\" />
-    <Folder Include="CQRS\Queries\Loans\" />
     <Folder Include="CQRS\Queries\Lotteries\" />
     <Folder Include="CQRS\Queries\Members\" />
     <Folder Include="CQRS\Queries\Transactions\" />
@@ -47,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
