--- a/src/TekhLoanManagement.Application/TekhLoanManagement.Application.csproj
+++ b/src/TekhLoanManagement.Application/TekhLoanManagement.Application.csproj
@@ -10,14 +10,11 @@
     <Folder Include="CQRS\Behaviors\" />
     <Folder Include="CQRS\Commands\Funds\" />
     <Folder Include="CQRS\Commands\Installments\" />
-    <Folder Include="CQRS\Commands\Lotteries\" />
+    <Folder Include="CQRS\Commands\Loans\" />
     <Folder Include="CQRS\Commands\Members\" />
     <Folder Include="CQRS\Handlers\Funds\" />
-    <Folder Include="CQRS\Handlers\Installments\" />
-    <Folder Include="CQRS\Handlers\Lotteries\" />
     <Folder Include="CQRS\Handlers\Members\" />
     <Folder Include="CQRS\Queries\Funds\" />
-    <Folder Include="CQRS\Queries\Installments\" />
     <Folder Include="CQRS\Queries\Lotteries\" />
     <Folder Include="CQRS\Queries\Members\" />
     <Folder Include="DTOs\Requests\Funds\" />
@@ -28,6 +25,8 @@
     <Folder Include="DTOs\Requests\Transactions\" />
     <Folder Include="DTOs\Requests\WalletAccounts\" />
     <Folder Include="DTOs\Responses\Funds\" />
+    <Folder Include="DTOs\Responses\Installments\" />
+    <Folder Include="DTOs\Responses\Loans\" />
     <Folder Include="DTOs\Responses\Lotteries\" />
     <Folder Include="DTOs\Responses\Members\" />
     <Folder Include="Services\" />
@@ -35,7 +34,6 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="16.0.0" />
-    <PackageReference Include="FluentValidation" Version="12.1.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
