--- a/src/TekhLoanManagement.Domain/TekhLoanManagement.Domain.csproj
+++ b/src/TekhLoanManagement.Domain/TekhLoanManagement.Domain.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="5.0.0" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.1" />
   </ItemGroup>
 
