--- a/src/TekhLoanManagement.Api/appsettings.json
+++ b/src/TekhLoanManagement.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TekhLoanDbContext": "Server=(localdb)\\mssqllocaldb;Database=TekhLoanDbContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJWTGeneration1234!",
+    "Issuer": "MyApp",
+    "Audience": "MyAppUsers",
+    "ExpiresInMinutes": 60
   }
 }
